# netrunner-lib

./: .gitignore  .gitmodules  README.md  run.sh
netrunner_lib/: pyproject.toml
netrunner_lib/netrunner_lib/: .env-template  deck.py  errors.py  game_events.py  game_state.py  main.py  players.py  variables.py
netrunner_lib/netrunner_lib/api/: netrunnerdb_api_v2.py  netrunnerdb_api_v3.py
netrunner_lib/netrunner_lib/assets/netrunnerDB/: netrunnberdb-cards-v2-03-31-2021.json
netrunner_lib/netrunner_lib/assets/netrunnerDB/deck_lists/: -system-gateway-corp-starter-deck.o8d  -system-gateway-corp-starter-deck.txt  (+45 more)
netrunner_lib/netrunner_lib/cards/: _base_card_classes.py  _card_utilities.py  agenda-cgpt-implementation.py  agenda.py  asset.py  event.py  ice.py  operation.py  program.py  resource.py  test-cgpt-compact-context.md  test-cgpt-implementation.md  upgrade.py
netrunner_lib/netrunner_lib/cards/tests/: test_event.py  test_identity.py  test_operation.py
netrunner_lib/netrunner_lib/tests/: _test_utilities.py  test_ai_players1.py  test_deck.py  test_game_manager_turn_routing.py  test_players.py  test_references.md
netrunner_lib/netrunner_lib/tests/card_tests/: test_agenda.py  test_asset.py  test_base_card_classes.py  test_deck.py  test_event.py  test_hardware.py  test_ice.py  test_identity.py  test_operation.py  test_program.py  test_resource.py  test_single_asset.py  test_upgrade.py
netrunner_lib/netrunner_lib/tests/gameplay_tests/: test_beginner_game1.py  test_game_play_all_types.py  test_game_play_all_types2.py  test_game_setup1.py  test_game_state1.py
(+48 files in other folders)
